fix(opensearch): Fixing the Zeebe IT testing setup (#11958)
* fix(opensearch): Fixing the Zeebe IT testing setup

* fix(opensearch): Implementing suggestions from review

* improve(opensearch): Fix QueryDSL.gt

* fix(opensearch): Implementing suggestions from review

* fix(opensearch): Implementing findings from review

---------

Co-authored-by: Oleksandr Kriuchenko <oleksandr.kriuchenko-ext@camunda.com>